--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.0-rc.1",
+    "typeface-roboto": "^1.1.13",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
