--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -26,6 +26,9 @@ jobs:
         echo $SERVER_ENV > env/server.env
         echo $CLIENT_ENV > env/client.env
         echo $DB_ENV > env/db.env
+        cat env/server.env
+        cat env/client.env
+        cat  env/db.env
         
     - name: Login to Docker Hub
       uses: docker/login-action@v2
