Update compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ version: "3.8"
 
 services:
   db:
+    image: mongo:6.0.5
     container_name: vidtube-mongodb
     restart: always
-    image: mongo:6.0.5
     volumes:
       - db-data:/data/db
     ports:
@@ -15,13 +15,17 @@ services:
       - vidtube-network
 
   backend:
+    image: shyam2056/vidtube-backend
     container_name: vidtube-backend
     restart: always
     build:
+      args:
+        - NODE_ENV=development
       context: ./server
-    image: shyam2056/vidtube-backend
+      target: development
     volumes:
       - ./server:/server
+      - /server/node_modules
     ports:
       - 5000:5000
     depends_on:
@@ -32,15 +36,19 @@ services:
       - vidtube-network
 
   frontend:
+    image: shyam2056/vidtube-frontend
     container_name: vidtube-frontend
     restart: always
     stdin_open: true
     tty: true
     build:
+      args:
+        - NODE_ENV=development
       context: ./client
-    image: shyam2056/vidtube-frontend
+      target: development
     volumes:
       - ./client/src:/client/src
+      - /client/node_modules
     ports:
       - 3000:3000
     depends_on:
